2013-04-29  Roland McGrath  <roland@hack.frob.com>

	* io/fchdir.c (__fchdir): Renamed from fchdir.
	(fchdir): Define as weak alias.

2013-04-29  Joseph Myers  <joseph@codesourcery.com>

	* math/libm-test.inc (ERRNO_UNCHANGED): New macro.
	(ERRNO_EDOM): Likewise.
	(ERRNO_ERANGE): Likewise.
	(noErrnoTests): New variable.
	(init_max_error): Set errno to 0.
	(test_single_errno): New function.
	(test_errno): Likewise.
	(check_float_internal): Call test_errno.  Set errno to 0.
	(check_complex): Refer to errno tests in comment.
	(check_int): Call test_errno.  Set errno to 0.
	(check_long): Likewise.
	(check_bool): Likewise.
	(check_longlong): Likewise.
	(cos_test): Use ERRNO_* flags for errno tests instead of
	check_int.
	(expm1_test): Likewise.
	(fmod_test): Likewise.
	(ilogb_test): Likewise.
	(lgamma_test): Likewise.
	(pow_test): Likewise.
	(remainder_test): Likewise.
	(sin_test): Likewise.
	(tan_test): Likewise.
	(yn_test): Likewise.
	(initialize): Set errno to 0.
	(main): Print number of errno tests.
	* math/gen-libm-test.pl (parse_args): Allow ERRNO flags on tests.

2013-04-29  Andreas Jaeger  <aj@suse.de>

	[BZ #15084]
	* resolv/res_debug.c (p_option): Fix strings for RES_USEBSTRING
	and RES_USEVC.

	[BZ #15085]
	* resolv/resolv.h (RES_NOCHECKNAME): Mark as unimplemented.
	* resolv/res_debug.c (p_option): Mark RES_NOCHECKNAME as
	unimplemented.

	[BZ #15380]
	* stdlib/random.c (__initstate): Return NULL if
	__initstate fails.

	[BZ #15086]
	* resolv/res_debug.c (p_option): Handle RES_NOALIASES,
	RES_KEEPTSIG, RES_BLAST, RES_NOIP6DOTINT, RES_SNGLKUP,
	RES_SNGLKUPREOP.

2013-04-29  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/fpu/libm-test-ulps: Update.

2013-04-29  Joseph Myers  <joseph@codesourcery.com>

	* math/libm-test.inc (cacos_test): Add missing semicolons at ends
	of individual tests.
	(casin_test): Likewise.
	(casinh_test): Likewise.

2013-04-27  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15409]